- Refactor code to use ImmutableList builder